<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmActivity">

    <TextView
        android:id="@+id/textViewMemoConfirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="TextViewMemo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/MemoConfirm"
        app:layout_constraintEnd_toEndOf="@+id/textViewWorkConfirm"
        app:layout_constraintStart_toStartOf="@+id/textViewWorkConfirm"
        app:layout_constraintTop_toTopOf="@+id/MemoConfirm" />

    <TextView
        android:id="@+id/textViewWorkConfirm"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:gravity="left|center_vertical"
        android:text="TextViewWork"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/WorkConfirm"
        app:layout_constraintEnd_toEndOf="@+id/textViewDateConfirm"
        app:layout_constraintStart_toStartOf="@+id/textViewDateConfirm"
        app:layout_constraintTop_toTopOf="@+id/WorkConfirm" />

    <TextView
        android:id="@+id/textViewDateConfirm"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:gravity="left|center_vertical"
        android:text="TextViewDate"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/DateConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/DateConfirm"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/buttonNextConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBackConfirm" />

    <Button
        android:id="@+id/buttonBackConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNextConfirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/MemoConfirm"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/memo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/buttonBackConfirm"
        app:layout_constraintEnd_toEndOf="@+id/WorkConfirm"
        app:layout_constraintStart_toStartOf="@+id/WorkConfirm"
        app:layout_constraintTop_toBottomOf="@+id/WorkConfirm" />

    <TextView
        android:id="@+id/DateConfirm"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/WorkConfirm"
        app:layout_constraintEnd_toStartOf="@+id/textViewDateConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConfirmExplanation" />

    <TextView
        android:id="@+id/WorkConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workContext"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/MemoConfirm"
        app:layout_constraintEnd_toEndOf="@+id/DateConfirm"
        app:layout_constraintStart_toStartOf="@+id/DateConfirm"
        app:layout_constraintTop_toBottomOf="@+id/DateConfirm" />

    <TextView
        android:id="@+id/textViewConfirmTitle"
        style="@style/MyTitle"

        android:text="@string/confirmTitle"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TODO もうちょっと上下の隙間開けて見やすくする -->
    <TextView
        android:id="@+id/textViewConfirmExplanation"
        style="@style/MyExplanation"
        android:layout_width="0dp"
        android:text="@string/confirmExplanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConfirmTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>