<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    tools:context=".InputActivity">

    <Spinner
        android:id="@+id/spinnerWork"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:gravity="left|center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textViewWorkConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewWorkConfirm" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewMemoConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNextInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBackInput" />

    <Button
        android:id="@+id/buttonBackInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/buttonNextInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonNextInput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewDateInput"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:gravity="left|center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="@+id/DateConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/DateConfirm"
        tools:text="TextViewDate" />

    <TextView
        android:id="@+id/DateConfirm"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/textViewWorkConfirm"
        app:layout_constraintEnd_toStartOf="@+id/textViewDateInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewWorkConfirm"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/workContext"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/textViewMemoConfirm"
        app:layout_constraintEnd_toStartOf="@+id/spinnerWork"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewMemoConfirm"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="287dp"
        android:text="@string/memo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewInputTitle"
        android:text="@string/inputTitle"
        style="@style/MyTitle"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>